export interface Role {
  id: string
  name: string
}

export interface AddRole {
  name?: string
}
